--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -16,11 +16,11 @@
         <p>Use this site to get your weather!</p>
 
         <form>
-            <input placeholder="Location">
+            <input placeholder="Type desired location here">
 
             <div>
                 <label>
-                    <input type="radio" name="units" value="f" checked> Farenheit</label>
+                    <input type="radio" name="units" value="f" checked> Fahrenheit</label>
                 </label>
 
                 <label>
